third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991b.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/bug_10991b.move:8:21
  │
8 │         assert!(foo(|_, y| y,
  │                     ^^^^^^^^
